--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+
 ext {
     retrofit = "2.5.0"
 }
@@ -41,7 +42,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.squareup.assertj:assertj-android-recyclerview-v7:1.2.0'
     //Picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:cardview-v7:28.0.0'
     //rxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
@@ -50,4 +50,9 @@ dependencies {
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
     //Text Reader
     implementation 'org.jsoup:jsoup:1.11.3'
+
+//    //Calendar API
+//    implementation 'com.google.api-client:google-api-client:1.25.0'
+//    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+//    implementation 'com.google.apis:google-api-services-calendar:v3-rev305-1.23.0'
 }
